test/functions/generic/poi/writethis-user-record.good
writethis-user-record.chpl:49: In function 'reproWriteln':
writethis-user-record.chpl:52: error: success
  writethis-user-record.chpl:46: called as reproWriteln(channel: owned object, arg: Color) from function 'reproWriteln'
  writethis-user-record.chpl:37: called as reproWriteln(arg: Color)
